<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ssss" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="130dp"
                android:text="@string/about_restaurant"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/describeRestaurant"
                android:textSize="20sp"
                tools:fontFamily="sans-serif" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/menu"
                android:textColor="#000000"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:src="@drawable/kissclipart" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:elevation="10dp"
                    android:orientation="vertical"
                    android:padding="2dp">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="150dp"
                        android:layout_height="65dp"
                        android:layout_marginLeft="18dp"
                        android:layout_weight="1"
                        android:src="@drawable/chickennugget" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:gravity="center"
                        android:text="@string/food1"
                        android:textSize="25sp"
                        app:fontFamily="@font/aladin" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="5dp"
                        android:background="#03A9F4"
                        android:text="@string/button1"
                        android:textColor="@color/btnColor"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:elevation="10dp"
                    android:orientation="vertical"
                    android:padding="2dp">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="150dp"
                        android:layout_height="65dp"
                        android:layout_marginLeft="17dp"
                        android:layout_weight="1"
                        android:src="@drawable/frenchfries" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:gravity="center"
                        android:text="@string/food2"
                        android:textSize="25sp"
                        app:fontFamily="@font/aladin" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="5dp"
                        android:background="#03A9F4"
                        android:text="@string/button2"
                        android:textColor="@color/btnColor"
                        android:textSize="18sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:elevation="10dp"
                    android:orientation="vertical"
                    android:padding="2dp">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="150dp"
                        android:layout_height="65dp"
                        android:layout_marginLeft="18dp"
                        android:layout_weight="1"
                        android:src="@drawable/calamari" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:gravity="center"
                        android:text="@string/food3"
                        android:textSize="25sp"
                        app:fontFamily="@font/aladin" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="5dp"
                        android:background="#03A9F4"
                        android:text="@string/button3"
                        android:textColor="@color/btnColor"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:elevation="10dp"
                    android:orientation="vertical"
                    android:padding="2dp">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="150dp"
                        android:layout_height="65dp"
                        android:layout_marginLeft="18dp"
                        android:layout_weight="1"
                        android:src="@drawable/recipe" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:gravity="center"
                        android:text="@string/food4"
                        android:textSize="25sp"
                        app:fontFamily="@font/aladin" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginTop="5dp"
                        android:background="#03A9F4"
                        android:text="@string/button4"
                        android:textColor="@color/btnColor"
                        android:textSize="18sp" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textColor="@color/infoBusColor"
                    android:textSize="25sp"
                    app:fontFamily="@font/anton"
                    tools:layout_weight="0" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/desAddress"
                    android:textColor="@color/infoBusColor"
                    android:textSize="20sp"
                    tools:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call"
                    android:textColor="@color/infoBusColor"
                    android:textSize="25sp"
                    app:fontFamily="@font/anton"
                    tools:layout_weight="0" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/numCall"
                    android:textColor="@color/infoBusColor"
                    android:textSize="20sp"
                    tools:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/work_hours"
                    android:textColor="@color/infoBusColor"
                    android:textSize="25sp"
                    app:fontFamily="@font/anton" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date"
                    android:textColor="@color/infoBusColor"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</ScrollView>